java: use Java 21 features